# llm-bench

./: .gitignore  README.md  pyproject.toml
dashboard/: app.py
docs/: methodology.md  model_policy.md  overnight_plan.md
models/: registry.yaml
report/: _quarto.yml  index.qmd
results/: eval_catchup_handoff_20260514.md  eval_catchup_plan.json  eval_catchup_plan.md  eval_summary_full.csv  eval_summary_primary.csv  gemma4_26b_drafter_benchmark_20260506T224511Z.json  gemma4_26b_drafter_full_20260506T235442Z.json  gemma4_26b_drafter_smoke_20260506T235258Z.json  gemma4_31b_drafter_benchmark_20260506T203755Z.json  gemma4_31b_drafter_benchmark_20260506T204249Z.json  gemma4_31b_drafter_full_4bit_dflash_20260506T235442Z.json  gemma4_31b_drafter_full_8bit_mtp_20260506T235442Z.json  gemma4_31b_drafter_smoke_4bit_dflash_20260506T235258Z.json  gemma4_31b_drafter_smoke_8bit_mtp_20260506T235258Z.json  gemma4_31b_meaningful_drafter_benchmark_20260507T000515Z.json  gemma4_31b_meaningful_drafter_benchmark_20260507T000515Z.summary.csv  index.json  mtplx_speedups.csv  summary.csv
results/analysis/: eval_sample_audit.json  eval_sample_audit.md
results/eval_traces/: 20260503T133736Z_qwen-3.5-4b-gguf-q8_smoke.jsonl  20260504T021928Z_qwen-3.5-4b-gguf-q8_smoke.jsonl  20260504T025055Z_qwen-3.5-4b-gguf-q8_long.jsonl  20260504T025752Z_gemma-4-E4B-gguf-q8_full.jsonl  20260504T030406Z_gemma-4-E4B-gguf-q8_full.jsonl  20260504T031409Z_gemma-4-E4B-gguf-q8_full.jsonl  (+102 more)
scripts/: aggregate_evals.py  audit_eval_samples.py  bench_gemma4_26b_drafters.py  bench_gemma4_31b_drafters.py  bench_gemma4_31b_meaningful_drafters.py  build_index.py  compare_mtplx.py  compare_quality.py  download_gguf.sh  export_site_data.py  export_site_public_data.py  import_programbench.py  plan_eval_catchup.py  preflight.py  run_bench.py  run_evals.py  run_evals_overnight.sh  run_programbench.py  run_terminal_bench.py  sync_models.py
site/: package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  wrangler.jsonc
tests/: test_aggregate.py  test_bfcl.py  test_bigcodebench_runner.py  test_ds4_runner.py  test_eval_aggregate.py  test_eval_plan.py  test_eval_trace.py  test_evalplus_runner.py  test_evals_suites.py  test_imports.py  test_index.py  test_kmmlu_pro_runner.py  test_livebench_runner.py  test_livecodebench_runner.py  test_lmeval.py  test_manifest.py  test_memory_stability.py  test_model_server.py  test_mtplx_compare.py  test_mtplx_runner.py  test_openai_runner.py  test_programbench_runner.py  test_registry.py  test_reporting.py  test_run_bench.py  test_run_evals.py  test_run_programbench.py  test_run_terminal_bench.py  test_runners_base.py  test_site_data.py  test_sourceqa.py  test_sync_models.py  test_terminal_bench_runner.py
(+222 files in other folders)
