[project]
name = "llm-bench"
version = "0.3.0"
description = "MLX vs GGUF inference benchmark for Apple Silicon (M5 Max)"
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "haxlys" }]

dependencies = [
    "mlx-lm>=0.20",
    "streamlit>=1.40",
    "plotly>=5.24",
    "pandas>=2.2",
    "psutil>=6.0",
    "click>=8.1",
    "huggingface-hub>=0.26",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
quality = ["sentence-transformers>=3.0"]
evals = [
    "lm-eval[api]>=0.4.5",
    "requests>=2.32",
    "openai>=1.50",
    "datasets>=3.0",
    # longbench scoring deps (rouge, fuzzy match, Chinese tokenizer)
    "jieba>=0.42",
    "fuzzywuzzy>=0.18",
    "rouge>=1.0",
    "python-Levenshtein>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_bench"]

[dependency-groups]
dev = ["ruff>=0.6", "pytest>=8"]

[tool.ruff]
line-length = 100
target-version = "py313"
